<resources>
    <string name="app_name">ShowDekho</string>
    <string name="title_activity_organizer">Organizer</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="moviename">Enter Movie Name?</string>
    <string name="time">Enter Show Time</string>
    <string name="location">Enter Movie Theater and Location Name</string>
    <string name="price">Enter the ticket Price</string>
    <string name="lang">Movie language</string>
    <string name="genre">Enter mvie Genre</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>